--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "angular-datatables": "^5.0.0",
     "angular-highcharts": "^5.2.11",
+    "angular2-datatable": "^0.6.0",
     "core-js": "^2.4.1",
+    "datatables.net": "^1.10.16",
+    "datatables.net-dt": "^1.10.16",
     "highcharts": "^6.0.7",
+    "jquery": "^3.3.1",
     "ng2-uploader": "^2.0.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
@@ -33,9 +38,11 @@
     "@angular/cli": "~1.7.3",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
+    "@types/datatables.net": "^1.10.9",
     "@types/highcharts": "^5.0.21",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jquery": "^3.3.1",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
